# Eindopdracht_DEPA

./: CMakeLists.txt  ClassDiagram.puml  README.md  circuit.txt  main.cpp
circuits/: circuit2.txt
include/: AndGate.h  Circuit.h  Component.h  ComponentFactory.h  GateNode.h  InputNode.h  NandGate.h  NorGate.h  NotGate.h  OrGate.h  ProbeNode.h  Simulator.h  XorGate.h
src/: AndGate.cpp  Application.cpp  Application.h  Circuit.cpp  Component.cpp  ComponentFactory.cpp  FileReader.cpp  FileReader.h  GateNode.cpp  GateNode.h  InputNode.cpp  NandGate.cpp  NorGate.cpp  NorGate.h  NotGate.cpp  OrGate.cpp  ProbeNode.cpp  Simulator.cpp  Simulator.h  XorGate.cpp  XorGate.h
